add new category form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,8 +120,12 @@
     }
 
     /* BRANDS */
-
     .brand__form {
+        @apply bg-white p-6 space-y-4 rounded-lg
+    }
+    
+    /* CATEGORY */
+    .category__form {
         @apply bg-white p-6 space-y-4 rounded-lg
     }
 }
