diseño principal para paignas de usuario

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,4 +138,9 @@
     .provider__form {
         @apply bg-white p-6 space-y-6 rounded-lg
     }
+
+    /* USERS */
+    .role__permission__selector {
+        @apply grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-8
+    }
 }
