--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,4 +148,17 @@
     .warehouse__form {
         @apply bg-white p-6 space-y-6 rounded-lg
     }
+
+    /* CLIENTS */
+    .client__card {
+        @apply bg-white col-span-4 rounded-md pt-4 pb-8 px-6 text-center flex flex-col items-center justify-center
+    }
+
+    .client__card--data {
+        @apply flex items-center gap-2 justify-center
+    }
+
+    .customer__task--table {
+        @apply bg-white p-4 col-span-8
+    }
 }
