agregando charts de prueba

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@
 
     /* SIDE MENU */
     .sidemenu {
-        @apply max-w-72 xl:max-w-[350px] w-full bg-white h-screen px-8 pt-6 pb-8
+        @apply max-w-72 2xl:max-w-[350px] w-full bg-white h-screen px-8 pt-6 pb-8
     }
 
     .sidemenu__logo {
