--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,15 +82,19 @@
 
     /* SIDE MENU */
     .sidemenu {
-        @apply max-w-72 2xl:max-w-[350px] w-full bg-white h-screen px-8 pt-6 pb-8
+        @apply max-w-72 2xl:max-w-[320px] w-full bg-white h-screen px-8 pt-6 pb-8 border-r border-gray-200
     }
 
     .sidemenu__logo {
         @apply text-3xl font-extrabold mb-6 text-transparent bg-clip-text bg-gradient-to-r from-primary-400 to-indigo-600
     }
 
+    .sidemenu__item {
+        @apply bg-primary-500
+    }
+
     .sidemenu__principal--item {
-        @apply bg-white justify-start text-base text-gray-500 p-0 hover:text-primary flex items-center gap-2 font-semibold
+        @apply bg-white justify-start text-base text-gray-500 p-0 hover:text-primary flex items-center gap-2 font-medium
     }
 
     .sidemenu__principal--item:hover span {
